improve progresses; do not remove all orders immediately when user changed view mode to avoid ui jumping

--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,14 @@
   background: url("img/progress-indicator-big.gif");
   width: 32px;
   height: 32px;
+}
+
+.progress.big.bottom {
   margin-bottom: 20px;
+}
+
+.progress.big.top {
+  margin-top: 20px;
 }
 
 .button, .toggle {
